Set theme jekyll-theme-time-machine

--- a/_config.yml
+++ b/_config.yml
@@ -58,3 +58,5 @@ footer_content: <a href="https://github.com/kimdurante/intro-to-gdal" target="_b
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+theme: jekyll-theme-time-machine
