--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/gdal-ogr" # the subpath of your site, e.g. /blog
+baseurl: "/intro-to-gdal" # the subpath of your site, e.g. /blog
 url: "https://kimdurante.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
@@ -37,7 +37,7 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
-footer_content: <a href="https://github.com/kimdurante/gdal-ogr" target="_blank">View this workshop in GitHub</a>
+footer_content: <a href="https://github.com/kimdurante/intro-to-gdal" target="_blank">View this workshop in GitHub</a>
 
 # Exclude from processing.
 # The following items will not be processed, by default.
